# locale-ly

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tailwind.config.js
assets/css/: input.css  styles.css  theme.css
assets/js/: autosize.js
assets/locales/: de.json  de.yml  en.json  en.yml  es.json  es.yml  fr.json  fr.yml
base/: Cargo.toml
base/src/: file_type.rs  lib.rs  path.rs  pattern.rs
base/src/file/: item.rs  mod.rs  object.rs  parse.rs
base/src/parser/: base.rs  item.rs  mod.rs  object.rs  path.rs  translated.rs
base/src/parsers/: base.rs  interpolated.rs  interpolated_str.rs  mod.rs
base/src/serializers/: base.rs  json.rs  mod.rs  yaml.rs
cli/: Cargo.toml
cli/src/: lib.rs  object.rs  path.rs  translate.rs  writer.rs
cli/src/parse/: file.rs  item.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs  pattern.rs  translated.rs
core/src/file/: locales.rs
core/src/parsers/: base.rs  interpolated_str.rs  mod.rs
core/src/strings/: localized.rs  mod.rs  unlocalized.rs
errors/: Cargo.toml
errors/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: app.rs  appr.rs  lib.rs
frontend/src/components/: dropdown.rs  mod.rs
frontend/src/dock/: auto_translate.rs  export.rs  locales.rs  mod.rs
frontend/src/export/: chips.rs  mod.rs  state.rs
frontend/src/locales/: mod.rs
frontend/src/menu/: mod.rs  project.rs  projects.rs  state.rs
frontend/src/project/: locales.rs  mod.rs
frontend/src/settings/: locale.rs  mod.rs  theme.rs  version.rs
frontend/src/translations/: cell.rs  editor.rs  mod.rs  row.rs
frontend/src/utils/: loading.rs
macros/: Cargo.toml
macros/src/: extend_enum.rs  extends.rs  lib.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: dropdown.rs  tab_selector.rs
src/menu/: mod.rs
src/settings/: version.rs
