[package]
name = "locale-ly"
version = "0.0.0"
edition = "2021"

[dependencies]
frontend = { path = "frontend" }


[workspace.dependencies]
lingual = { path = "lingual" }
errors = { path = "errors" }
base = { path = "base" }
rust-i18n = "2.1.0"


[workspace.package]
version = "0.0.0"

[workspace]
members = ["src-tauri", "base", "frontend", "errors", "cli", "macros"]
