[package]
name = "base"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
lingual = {workspace =true}
errors = {workspace =true}
serde = {version="1.0.194", features=["derive"]}
serde_json = "1.0.110"
serde_yaml = "0.9.30"
tokio = {version="1.35.1", features=["rt", "rt-multi-thread", "macros", "fs", "io-util", "test-util"]}
rust-i18n = {workspace = true}
async-recursion = "1.0.5"