[package]
name = "cli"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { workspace = true }
clap = "4.4.12"
serde_json = "1.0.110"
serde_yaml = "0.9.30"
tokio = {version="1.35.1", features=["rt", "rt-multi-thread", "macros", "fs", "io-util", "test-util"]}
rust-i18n = {workspace = true}
lingual = {workspace = true}
errors = {workspace = true}

