[package]
name = "cli"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { workspace = true }
rust-i18n = {workspace = true}
clap = {version="4.4.12", features=["derive"]}
lingual = {workspace = true}
errors = {workspace = true}

