[package]
name = "core"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
lingual = {workspace =true}
errors = {workspace =true}
sled = "0.34.7"
serde = {version="1.0.194", features=["derive"]}
serde_json = "1.0.110"